Fixed some build errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.14.7)
 
 project(worm)
 
-set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
-file(GLOB_RECURSE SOURCE_FILES RELATIVE ${SRC_DIR} *.cpp *.hpp)
+file(GLOB_RECURSE SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")
+list(FILTER SOURCE_FILES EXCLUDE REGEX "CMakeFiles/[^;]+;?")
+
+message("=== Source Files ===")
+foreach(F IN LISTS SOURCE_FILES)
+    message("${F}")
+endforeach()
 
 add_executable(worm ${SOURCE_FILES})
