--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,19 @@ cmake_minimum_required(VERSION 3.14.7)
 
 project(worm)
 
+set(WORM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
 file(GLOB_RECURSE SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")
 list(FILTER SOURCE_FILES EXCLUDE REGEX "CMakeFiles/[^;]+;?")
 
-message("=== Source Files ===")
-foreach(F IN LISTS SOURCE_FILES)
-    message("${F}")
-endforeach()
+add_library(worm INTERFACE)
 
-add_executable(worm ${SOURCE_FILES})
+target_include_directories(worm INTERFACE
+    $<BUILD_INTERFACE:${WORM_INCLUDE_DIR}>
+    $<INSTALL_INTERFACE:include>)
+
+set(TEST TRUE)
+
+if(TEST)
+    add_subdirectory(test)
+endif()
