--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(worm)
 
 set(WORM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-file(GLOB_RECURSE SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")
+file(GLOB_RECURSE SOURCE_FILES RELATIVE "${WORM_INCLUDE_DIR}" "*.hpp")
 list(FILTER SOURCE_FILES EXCLUDE REGEX "CMakeFiles/[^;]+;?")
 
 add_library(worm INTERFACE)
+target_compile_features(worm INTERFACE cxx_std_17)
 
 target_include_directories(worm INTERFACE
     $<BUILD_INTERFACE:${WORM_INCLUDE_DIR}>
@@ -16,5 +17,9 @@ target_include_directories(worm INTERFACE
 set(TEST TRUE)
 
 if(TEST)
+    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_CXX_FLAGS "-std=c++17 -stdlib=libc++ ${CMAKE_CXX_FLAGS}")
+    endif()
+    add_subdirectory(src)
     add_subdirectory(test)
 endif()
