--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,5 @@ if(TEST)
         set(CMAKE_CXX_FLAGS "-std=c++17 -stdlib=libc++ ${CMAKE_CXX_FLAGS}")
     endif()
     add_subdirectory(src)
-    add_subdirectory(test)
+    # add_subdirectory(test)
 endif()
